update style fix key warning

--- a/client/src/components/BookList/style.css
+++ b/client/src/components/BookList/style.css
@@ -15,3 +15,13 @@ a {
     font-style: italic;
     color : darkblue
 }
+
+li {
+    list-style: none;
+}
+
+.row {
+    border-width: medium;
+    border-color: lightblue;
+    padding: 2%
+}
